# Project_Parser_Api_CyberSport

./: pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2024_09_19_1323-fe5e209b1124_create_news_table.py
app/bot/: telegram_bot.py
app/core/: config.py  crud.py
app/core/models/: __init__.py  base.py  db_helper.py  news.py
app/parser/: news.py
app/task/: collector.py  spamer.py  used_bot.py
